[package]
name          = "chomp"
version       = "0.2.5"
authors       = ["Martin Wernstål <m4rw3r@gmail.com>"]
description   = "A fast monadic-style parser combinator designed to work on stable Rust."
documentation = "http://m4rw3r.github.io/chomp"
homepage      = "http://github.com/m4rw3r/chomp"
repository    = "http://github.com/m4rw3r/chomp"
readme        = "README.md"
keywords      = ["parser", "parser-combinators", "parsing", "streaming"]
license       = "MIT"

include = [
    "benches/**/*.rs",
    "examples/**/*.rs",
    "src/**/*.rs",
    "tests/**/*.rs",
    ".gitignore",
    "CHANGELOG.md",
    "README.md",
    "Cargo.toml",
]

[dependencies]
bitflags = "0.5.0"
conv     = { version = "0.3", default-features = false }

# Technically a dev-dependency, but dev-dependencies are not allowed to be optional,
# compiletest_rs fails to compile on stable and beta
compiletest_rs = { version = "0.1.1", optional = true }

[features]
default       = ["verbose_error"]
verbose_error = []
# Feature for running extra (compiletime fail) tests on nightly
unstable      = ["compiletest_rs"]
